[metadata]
name = grants
description = Government Grant Disbursement API
author = Iskandar Zulkarnaien

[options]
packages =
    grants
# install_requires =
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
grants = py.typed

[flake8]
max-line-length = 160
