[metadata]
name = grants
description = Government Grant Disbursement API
author = Iskandar Zulkarnaien

[options]
packages =
    grants
    grants.households
install_requires =
    Flask == 2.2.2
    Flask-SQLAlchemy==2.5.1
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    faker>=14.2
    tox>=3.24

[options.package_data]
grants = py.typed

[pytest]
norecursedirs=tests/helpers

[flake8]
max-line-length = 160
